Added gallery items

--- a/gallery.html
+++ b/gallery.html
@@ -31,31 +31,31 @@
 			</button>
 			<ul class="nav-links">
 				<li>
-					<a href="#home" class="nav-link"><p>Inicio</p></a>
+					<a href="/#home" class="nav-link"><p>Inicio</p></a>
 				</li>
 				<li>
-					<a href="#dresses" class="nav-link"><p>Sobre mí</p></a>
+					<a href="/#about" class="nav-link"><p>Sobre mí</p></a>
 				</li>
 				<li>
-					<a href="#tops" class="nav-link"><p>Vestidos</p></a>
+					<a href="/#dresses" class="nav-link"><p>Vestidos</p></a>
 				</li>
 				<li>
-					<a href="#bottoms" class="nav-link"><p>Tops</p></a>
+					<a href="/#others" class="nav-link"><p>otros</p></a>
 				</li>
 			</ul>
 			<div id="side-bar" class="side-bar">
 				<ul class="side-bar-links">
 					<li>
-						<a href="#home" class="side-bar-link"><p>Inicio</p></a>
+						<a href="/#home" class="side-bar-link"><p>Inicio</p></a>
 					</li>
 					<li>
-						<a href="#dresses" class="side-bar-link"><p>Sobre mí</p></a>
+						<a href="/#about" class="side-bar-link"><p>Sobre mí</p></a>
 					</li>
 					<li>
-						<a href="#tops" class="side-bar-link"><p>Vestidos</p></a>
+						<a href="/#dresses" class="side-bar-link"><p>Vestidos</p></a>
 					</li>
 					<li>
-						<a href="#bottoms" class="side-bar-link"><p>Tops</p></a>
+						<a href="/#others" class="side-bar-link"><p>otros</p></a>
 					</li>
 				</ul>
 				<hr />
@@ -91,48 +91,55 @@
 					class="tab-input"
 					checked
 				/>
-				<input type="radio" id="tops-tab" name="tabs" class="tab-input" />
+				<input type="radio" id="otros-tab" name="tabs" class="tab-input" />
 				<div class="tab-labels">
 					<label for="dresses-tab" class="tab-label">Vestidos</label>
-					<label for="tops-tab" class="tab-label">Tops</label>
+					<label for="otros-tab" class="tab-label">Otros</label>
 				</div>
 				<div class="tab-contents">
 					<div class="tab-content">
 						<div class="gallery-grid">
 							<div class="gallery-item fade-in">
 								<img
-									src="./assets/dresses/preview_1.png"
+									src="./assets/clothing/gallery/dresses/1.jpg"
 									class="gallery-image"
 								/>
-								<p class="gallery-item-name">Vestido Número Uno</p>
+								<p class="gallery-item-name">Número Uno</p>
 							</div>
 							<div class="gallery-item fade-in">
 								<img
-									src="./assets/dresses/preview_2.png"
+									src="./assets/clothing/gallery/dresses/2.jpg"
 									class="gallery-image"
 								/>
-								<p class="gallery-item-name">Vestido Número Dos</p>
+								<p class="gallery-item-name">Número Dos</p>
 							</div>
 							<div class="gallery-item fade-in">
 								<img
-									src="./assets/dresses/preview_3.png"
+									src="./assets/clothing/gallery/dresses/3.jpg"
 									class="gallery-image"
 								/>
-								<p class="gallery-item-name">Vestido Número Tres</p>
+								<p class="gallery-item-name">Número Tres</p>
 							</div>
 							<div class="gallery-item fade-in">
 								<img
-									src="./assets/dresses/preview_4.png"
+									src="./assets/clothing/gallery/dresses/4.jpg"
 									class="gallery-image"
 								/>
-								<p class="gallery-item-name">Vestido Número Cuatro</p>
+								<p class="gallery-item-name">Número Cuatro</p>
 							</div>
 							<div class="gallery-item fade-in">
 								<img
-									src="./assets/dresses/preview_5.png"
+									src="./assets/clothing/gallery/dresses/5.jpg"
 									class="gallery-image"
 								/>
-								<p class="gallery-item-name">Vestido Número Cinco</p>
+								<p class="gallery-item-name">Número Cinco</p>
+							</div>
+							<div class="gallery-item fade-in">
+								<img
+									src="./assets/clothing/gallery/dresses/6.jpg"
+									class="gallery-image"
+								/>
+								<p class="gallery-item-name">Número Seis</p>
 							</div>
 						</div>
 					</div>
@@ -140,38 +147,45 @@
 						<div class="gallery-grid">
 							<div class="gallery-item fade-in">
 								<img
-									src="./assets/dresses/preview_6.png"
+									src="./assets/clothing/gallery/others/1.jpg"
 									class="gallery-image"
 								/>
-								<p class="gallery-item-name">Top Número Uno</p>
+								<p class="gallery-item-name">Número Uno</p>
 							</div>
 							<div class="gallery-item fade-in">
 								<img
-									src="./assets/dresses/preview_7.png"
+									src="./assets/clothing/gallery/others/2.jpg"
 									class="gallery-image"
 								/>
-								<p class="gallery-item-name">Top Número Dos</p>
+								<p class="gallery-item-name">Número Dos</p>
 							</div>
 							<div class="gallery-item fade-in">
 								<img
-									src="./assets/dresses/preview_8.png"
+									src="./assets/clothing/gallery/others/3.jpg"
 									class="gallery-image"
 								/>
-								<p class="gallery-item-name">Top Número Tres</p>
+								<p class="gallery-item-name">Número Tres</p>
 							</div>
 							<div class="gallery-item fade-in">
 								<img
-									src="./assets/dresses/preview_9.png"
+									src="./assets/clothing/gallery/others/4.jpg"
 									class="gallery-image"
 								/>
-								<p class="gallery-item-name">Top Número Cuatro</p>
+								<p class="gallery-item-name">Número Cuatro</p>
 							</div>
 							<div class="gallery-item fade-in">
 								<img
-									src="./assets/dresses/preview_10.png"
+									src="./assets/clothing/gallery/others/5.jpg"
 									class="gallery-image"
 								/>
-								<p class="gallery-item-name">Top Número Cinco</p>
+								<p class="gallery-item-name">Número Cinco</p>
+							</div>
+							<div class="gallery-item fade-in">
+								<img
+									src="./assets/clothing/gallery/others/6.jpg"
+									class="gallery-image"
+								/>
+								<p class="gallery-item-name">Número Seis</p>
 							</div>
 						</div>
 					</div>
@@ -195,7 +209,7 @@
 						<li><a href="./index.html">Inicio</a></li>
 						<li><a href="./index.html">Sobre mí</a></li>
 						<li><a href="./index.html">Vestidos</a></li>
-						<li><a href="./index.html">Tops</a></li>
+						<li><a href="./index.html">otros</a></li>
 					</ul>
 				</div>
 				<div class="footer-column">
