--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
 					<a href="#home" class="nav-link"><p>Inicio</p></a>
 				</li>
 				<li>
-					<a href="#dresses" class="nav-link"><p>Sobre mí</p></a>
+					<a href="#about" class="nav-link"><p>Sobre mí</p></a>
 				</li>
 				<li>
-					<a href="#tops" class="nav-link"><p>Vestidos</p></a>
+					<a href="#dresses" class="nav-link"><p>Vestidos</p></a>
 				</li>
 				<li>
-					<a href="#bottoms" class="nav-link"><p>Tops</p></a>
+					<a href="#others" class="nav-link"><p>otros</p></a>
 				</li>
 			</ul>
 			<div id="side-bar" class="side-bar">
@@ -49,13 +49,13 @@
 						<a href="#home" class="side-bar-link"><p>Inicio</p></a>
 					</li>
 					<li>
-						<a href="#dresses" class="side-bar-link"><p>Sobre mí</p></a>
+						<a href="#about" class="side-bar-link"><p>Sobre mí</p></a>
 					</li>
 					<li>
-						<a href="#tops" class="side-bar-link"><p>Vestidos</p></a>
+						<a href="#dresses" class="side-bar-link"><p>Vestidos</p></a>
 					</li>
 					<li>
-						<a href="#bottoms" class="side-bar-link"><p>Tops</p></a>
+						<a href="#others" class="side-bar-link"><p>otros</p></a>
 					</li>
 				</ul>
 				<hr />
@@ -154,103 +154,103 @@
 					<!-- Fila 1 -->
 					<div class="image-gallery-row">
 						<div class="image-gallery-item">
-							<img src="./assets/dresses/preview_1.png" alt="Imagen 1" />
+							<img src="./assets/clothing/preview_1.png" alt="Imagen 1" />
 						</div>
 						<div class="image-gallery-item">
-							<img src="./assets/dresses/preview_2.png" alt="Imagen 2" />
+							<img src="./assets/clothing/preview_2.png" alt="Imagen 2" />
 						</div>
 						<div class="image-gallery-item">
-							<img src="./assets/dresses/preview_3.png" alt="Imagen 3" />
+							<img src="./assets/clothing/preview_3.png" alt="Imagen 3" />
 						</div>
 						<div class="image-gallery-item">
-							<img src="./assets/dresses/preview_4.png" alt="Imagen 4" />
+							<img src="./assets/clothing/preview_4.png" alt="Imagen 4" />
 						</div>
 						<div class="image-gallery-item">
-							<img src="./assets/dresses/preview_5.png" alt="Imagen 5" />
+							<img src="./assets/clothing/preview_5.png" alt="Imagen 5" />
 						</div>
 						<!-- Duplicado selectivo para bucle -->
 						<div class="image-gallery-item">
-							<img src="./assets/dresses/preview_1.png" alt="Imagen 1" />
+							<img src="./assets/clothing/preview_1.png" alt="Imagen 1" />
 						</div>
 						<div class="image-gallery-item">
-							<img src="./assets/dresses/preview_2.png" alt="Imagen 2" />
+							<img src="./assets/clothing/preview_2.png" alt="Imagen 2" />
 						</div>
 						<div class="image-gallery-item">
-							<img src="./assets/dresses/preview_3.png" alt="Imagen 3" />
+							<img src="./assets/clothing/preview_3.png" alt="Imagen 3" />
 						</div>
 						<div class="image-gallery-item">
-							<img src="./assets/dresses/preview_4.png" alt="Imagen 4" />
+							<img src="./assets/clothing/preview_4.png" alt="Imagen 4" />
 						</div>
 						<div class="image-gallery-item">
-							<img src="./assets/dresses/preview_5.png" alt="Imagen 5" />
+							<img src="./assets/clothing/preview_5.png" alt="Imagen 5" />
 						</div>
 					</div>
 					<!-- Fila 2 -->
 					<div class="image-gallery-row">
 						<div class="image-gallery-item">
-							<img src="./assets/dresses/preview_6.png" alt="Imagen 6" />
+							<img src="./assets/clothing/preview_6.png" alt="Imagen 6" />
 						</div>
 						<div class="image-gallery-item">
-							<img src="./assets/dresses/preview_7.png" alt="Imagen 7" />
+							<img src="./assets/clothing/preview_7.png" alt="Imagen 7" />
 						</div>
 						<div class="image-gallery-item">
-							<img src="./assets/dresses/preview_8.png" alt="Imagen 8" />
+							<img src="./assets/clothing/preview_8.png" alt="Imagen 8" />
 						</div>
 						<div class="image-gallery-item">
-							<img src="./assets/dresses/preview_9.png" alt="Imagen 9" />
+							<img src="./assets/clothing/preview_9.png" alt="Imagen 9" />
 						</div>
 						<div class="image-gallery-item">
-							<img src="./assets/dresses/preview_10.png" alt="Imagen 10" />
+							<img src="./assets/clothing/preview_10.png" alt="Imagen 10" />
 						</div>
 						<!-- Duplicado selectivo para bucle -->
 						<div class="image-gallery-item">
-							<img src="./assets/dresses/preview_6.png" alt="Imagen 6" />
+							<img src="./assets/clothing/preview_6.png" alt="Imagen 6" />
 						</div>
 						<div class="image-gallery-item">
-							<img src="./assets/dresses/preview_7.png" alt="Imagen 7" />
+							<img src="./assets/clothing/preview_7.png" alt="Imagen 7" />
 						</div>
 						<div class="image-gallery-item">
-							<img src="./assets/dresses/preview_8.png" alt="Imagen 8" />
+							<img src="./assets/clothing/preview_8.png" alt="Imagen 8" />
 						</div>
 						<div class="image-gallery-item">
-							<img src="./assets/dresses/preview_9.png" alt="Imagen 9" />
+							<img src="./assets/clothing/preview_9.png" alt="Imagen 9" />
 						</div>
 						<div class="image-gallery-item">
-							<img src="./assets/dresses/preview_10.png" alt="Imagen 10" />
+							<img src="./assets/clothing/preview_10.png" alt="Imagen 10" />
 						</div>
 					</div>
 					<!-- Fila 3 -->
 					<div class="image-gallery-row">
 						<div class="image-gallery-item">
-							<img src="./assets/dresses/preview_3.png" alt="Imagen 3" />
+							<img src="./assets/clothing/preview_3.png" alt="Imagen 3" />
 						</div>
 						<div class="image-gallery-item">
-							<img src="./assets/dresses/preview_4.png" alt="Imagen 4" />
+							<img src="./assets/clothing/preview_4.png" alt="Imagen 4" />
 						</div>
 						<div class="image-gallery-item">
-							<img src="./assets/dresses/preview_5.png" alt="Imagen 5" />
+							<img src="./assets/clothing/preview_5.png" alt="Imagen 5" />
 						</div>
 						<div class="image-gallery-item">
-							<img src="./assets/dresses/preview_6.png" alt="Imagen 6" />
+							<img src="./assets/clothing/preview_6.png" alt="Imagen 6" />
 						</div>
 						<div class="image-gallery-item">
-							<img src="./assets/dresses/preview_7.png" alt="Imagen 7" />
+							<img src="./assets/clothing/preview_7.png" alt="Imagen 7" />
 						</div>
 						<!-- Duplicado selectivo para bucle -->
 						<div class="image-gallery-item">
-							<img src="./assets/dresses/preview_3.png" alt="Imagen 3" />
+							<img src="./assets/clothing/preview_3.png" alt="Imagen 3" />
 						</div>
 						<div class="image-gallery-item">
-							<img src="./assets/dresses/preview_4.png" alt="Imagen 4" />
+							<img src="./assets/clothing/preview_4.png" alt="Imagen 4" />
 						</div>
 						<div class="image-gallery-item">
-							<img src="./assets/dresses/preview_5.png" alt="Imagen 5" />
+							<img src="./assets/clothing/preview_5.png" alt="Imagen 5" />
 						</div>
 						<div class="image-gallery-item">
-							<img src="./assets/dresses/preview_6.png" alt="Imagen 6" />
+							<img src="./assets/clothing/preview_6.png" alt="Imagen 6" />
 						</div>
 						<div class="image-gallery-item">
-							<img src="./assets/dresses/preview_7.png" alt="Imagen 7" />
+							<img src="./assets/clothing/preview_7.png" alt="Imagen 7" />
 						</div>
 					</div>
 				</div>
@@ -318,7 +318,7 @@
 					<div class="product-card-container rotate-in">
 						<a href="#" class="product-card">
 							<img
-								src="./assets/dresses/product_1.png"
+								src="./assets/clothing/product_1.png"
 								alt=""
 								class="preview-card-img"
 							/>
@@ -331,7 +331,7 @@
 					<div class="product-card-container rotate-in">
 						<a href="#" class="product-card">
 							<img
-								src="./assets/dresses/product_2.png"
+								src="./assets/clothing/product_2.png"
 								alt=""
 								class="preview-card-img"
 							/>
@@ -344,7 +344,7 @@
 					<div class="product-card-container rotate-in">
 						<a href="#" class="product-card">
 							<img
-								src="./assets/dresses/product_3.png"
+								src="./assets/clothing/product_3.png"
 								alt=""
 								class="preview-card-img"
 							/>
@@ -364,7 +364,7 @@
 				<div class="about-us-container two-columns">
 					<img
 						class="about-us-img fade-in"
-						src="./assets/dresses/featured.png"
+						src="./assets/clothing/featured.png"
 					/>
 					<div class="about-us-text">
 						<h1 class="section-title blur-out">Sobre mí</h1>
@@ -404,7 +404,7 @@
 						<li><a href="./index.html">Inicio</a></li>
 						<li><a href="./index.html">Sobre mí</a></li>
 						<li><a href="./index.html">Vestidos</a></li>
-						<li><a href="./index.html">Tops</a></li>
+						<li><a href="./index.html">otros</a></li>
 					</ul>
 				</div>
 				<div class="footer-column">
