--- a/index.html
+++ b/index.html
@@ -154,103 +154,100 @@
 					<!-- Fila 1 -->
 					<div class="image-gallery-row">
 						<div class="image-gallery-item">
-							<img src="./assets/clothing/preview_1.png" alt="Imagen 1" />
+							<img src="./assets/clothing/gallery/owner/preview_1.png" />
 						</div>
 						<div class="image-gallery-item">
-							<img src="./assets/clothing/preview_2.png" alt="Imagen 2" />
+							<img src="./assets/clothing/gallery/owner/preview_2.png" />
 						</div>
 						<div class="image-gallery-item">
-							<img src="./assets/clothing/preview_3.png" alt="Imagen 3" />
+							<img src="./assets/clothing/gallery/owner/preview_3.png" />
 						</div>
 						<div class="image-gallery-item">
-							<img src="./assets/clothing/preview_4.png" alt="Imagen 4" />
+							<img src="./assets/clothing/gallery/owner/preview_4.png" />
 						</div>
 						<div class="image-gallery-item">
-							<img src="./assets/clothing/preview_5.png" alt="Imagen 5" />
-						</div>
-						<!-- Duplicado selectivo para bucle -->
-						<div class="image-gallery-item">
-							<img src="./assets/clothing/preview_1.png" alt="Imagen 1" />
+							<img src="./assets/clothing/gallery/owner/preview_5.png" />
 						</div>
 						<div class="image-gallery-item">
-							<img src="./assets/clothing/preview_2.png" alt="Imagen 2" />
+							<img src="./assets/clothing/gallery/owner/preview_6.png" />
 						</div>
 						<div class="image-gallery-item">
-							<img src="./assets/clothing/preview_3.png" alt="Imagen 3" />
+							<img src="./assets/clothing/gallery/owner/preview_7.png" />
 						</div>
 						<div class="image-gallery-item">
-							<img src="./assets/clothing/preview_4.png" alt="Imagen 4" />
+							<img src="./assets/clothing/gallery/owner/preview_8.png" />
 						</div>
 						<div class="image-gallery-item">
-							<img src="./assets/clothing/preview_5.png" alt="Imagen 5" />
+							<img src="./assets/clothing/gallery/owner/preview_9.png" />
+						</div>
+						<div class="image-gallery-item">
+							<img src="./assets/clothing/gallery/owner/preview_10.png" />
 						</div>
 					</div>
 					<!-- Fila 2 -->
 					<div class="image-gallery-row">
 						<div class="image-gallery-item">
-							<img src="./assets/clothing/preview_6.png" alt="Imagen 6" />
+							<img src="./assets/clothing/gallery/owner/preview_11.png" />
 						</div>
 						<div class="image-gallery-item">
-							<img src="./assets/clothing/preview_7.png" alt="Imagen 7" />
+							<img src="./assets/clothing/gallery/owner/preview_12.png" />
 						</div>
 						<div class="image-gallery-item">
-							<img src="./assets/clothing/preview_8.png" alt="Imagen 8" />
+							<img src="./assets/clothing/gallery/owner/preview_13.png" />
 						</div>
 						<div class="image-gallery-item">
-							<img src="./assets/clothing/preview_9.png" alt="Imagen 9" />
+							<img src="./assets/clothing/gallery/owner/preview_14.png" />
 						</div>
 						<div class="image-gallery-item">
-							<img src="./assets/clothing/preview_10.png" alt="Imagen 10" />
-						</div>
-						<!-- Duplicado selectivo para bucle -->
-						<div class="image-gallery-item">
-							<img src="./assets/clothing/preview_6.png" alt="Imagen 6" />
+							<img src="./assets/clothing/gallery/owner/preview_15.png" />
 						</div>
 						<div class="image-gallery-item">
-							<img src="./assets/clothing/preview_7.png" alt="Imagen 7" />
+							<img src="./assets/clothing/gallery/owner/preview_16.png" />
 						</div>
 						<div class="image-gallery-item">
-							<img src="./assets/clothing/preview_8.png" alt="Imagen 8" />
+							<img src="./assets/clothing/gallery/owner/preview_17.png" />
 						</div>
 						<div class="image-gallery-item">
-							<img src="./assets/clothing/preview_9.png" alt="Imagen 9" />
+							<img src="./assets/clothing/gallery/owner/preview_18.png" />
 						</div>
 						<div class="image-gallery-item">
-							<img src="./assets/clothing/preview_10.png" alt="Imagen 10" />
+							<img src="./assets/clothing/gallery/owner/preview_19.png" />
+						</div>
+						<div class="image-gallery-item">
+							<img src="./assets/clothing/gallery/owner/preview_20.png" />
 						</div>
 					</div>
 					<!-- Fila 3 -->
 					<div class="image-gallery-row">
 						<div class="image-gallery-item">
-							<img src="./assets/clothing/preview_3.png" alt="Imagen 3" />
+							<img src="./assets/clothing/gallery/owner/preview_1.png" />
 						</div>
 						<div class="image-gallery-item">
-							<img src="./assets/clothing/preview_4.png" alt="Imagen 4" />
+							<img src="./assets/clothing/gallery/owner/preview_2.png" />
 						</div>
 						<div class="image-gallery-item">
-							<img src="./assets/clothing/preview_5.png" alt="Imagen 5" />
+							<img src="./assets/clothing/gallery/owner/preview_3.png" />
 						</div>
 						<div class="image-gallery-item">
-							<img src="./assets/clothing/preview_6.png" alt="Imagen 6" />
+							<img src="./assets/clothing/gallery/owner/preview_4.png" />
 						</div>
 						<div class="image-gallery-item">
-							<img src="./assets/clothing/preview_7.png" alt="Imagen 7" />
-						</div>
-						<!-- Duplicado selectivo para bucle -->
-						<div class="image-gallery-item">
-							<img src="./assets/clothing/preview_3.png" alt="Imagen 3" />
+							<img src="./assets/clothing/gallery/owner/preview_5.png" />
 						</div>
 						<div class="image-gallery-item">
-							<img src="./assets/clothing/preview_4.png" alt="Imagen 4" />
+							<img src="./assets/clothing/gallery/owner/preview_6.png" />
 						</div>
 						<div class="image-gallery-item">
-							<img src="./assets/clothing/preview_5.png" alt="Imagen 5" />
+							<img src="./assets/clothing/gallery/owner/preview_7.png" />
 						</div>
 						<div class="image-gallery-item">
-							<img src="./assets/clothing/preview_6.png" alt="Imagen 6" />
+							<img src="./assets/clothing/gallery/owner/preview_8.png" />
 						</div>
 						<div class="image-gallery-item">
-							<img src="./assets/clothing/preview_7.png" alt="Imagen 7" />
+							<img src="./assets/clothing/gallery/owner/preview_9.png" />
+						</div>
+						<div class="image-gallery-item">
+							<img src="./assets/clothing/gallery/owner/preview_10.png" />
 						</div>
 					</div>
 				</div>
