Deleted tabs in gallery

--- a/gallery.html
+++ b/gallery.html
@@ -78,119 +78,102 @@
 			</div>
 		</nav>
 
-		<section class="gallery-container">
+		<section class="gallery-section">
 			<h1 class="section-title">Lorem ipsum dolor sit</h1>
 			<p class="section-subtitle">
 				Lorem ipsum dolor sit amet consectetur adipisicing elit.
 			</p>
-			<div class="tabs-container">
-				<input
-					type="radio"
-					id="dresses-tab"
-					name="tabs"
-					class="tab-input"
-					checked
-				/>
-				<input type="radio" id="otros-tab" name="tabs" class="tab-input" />
-				<div class="tab-labels">
-					<label for="dresses-tab" class="tab-label">Vestidos</label>
-					<label for="otros-tab" class="tab-label">Otros</label>
+
+			<div class="gallery-grid">
+				<!-- Dresses 1-6 -->
+				<div class="gallery-item fade-in">
+					<img
+						src="./assets/clothing/gallery/dresses/1.jpg"
+						class="gallery-image"
+					/>
+					<p class="gallery-item-name">Vestido 1</p>
 				</div>
-				<div class="tab-contents">
-					<div class="tab-content">
-						<div class="gallery-grid">
-							<div class="gallery-item fade-in">
-								<img
-									src="./assets/clothing/gallery/dresses/1.jpg"
-									class="gallery-image"
-								/>
-								<p class="gallery-item-name">Número Uno</p>
-							</div>
-							<div class="gallery-item fade-in">
-								<img
-									src="./assets/clothing/gallery/dresses/2.jpg"
-									class="gallery-image"
-								/>
-								<p class="gallery-item-name">Número Dos</p>
-							</div>
-							<div class="gallery-item fade-in">
-								<img
-									src="./assets/clothing/gallery/dresses/3.jpg"
-									class="gallery-image"
-								/>
-								<p class="gallery-item-name">Número Tres</p>
-							</div>
-							<div class="gallery-item fade-in">
-								<img
-									src="./assets/clothing/gallery/dresses/4.jpg"
-									class="gallery-image"
-								/>
-								<p class="gallery-item-name">Número Cuatro</p>
-							</div>
-							<div class="gallery-item fade-in">
-								<img
-									src="./assets/clothing/gallery/dresses/5.jpg"
-									class="gallery-image"
-								/>
-								<p class="gallery-item-name">Número Cinco</p>
-							</div>
-							<div class="gallery-item fade-in">
-								<img
-									src="./assets/clothing/gallery/dresses/6.jpg"
-									class="gallery-image"
-								/>
-								<p class="gallery-item-name">Número Seis</p>
-							</div>
-						</div>
-					</div>
-					<div class="tab-content">
-						<div class="gallery-grid">
-							<div class="gallery-item fade-in">
-								<img
-									src="./assets/clothing/gallery/others/1.jpg"
-									class="gallery-image"
-								/>
-								<p class="gallery-item-name">Número Uno</p>
-							</div>
-							<div class="gallery-item fade-in">
-								<img
-									src="./assets/clothing/gallery/others/2.jpg"
-									class="gallery-image"
-								/>
-								<p class="gallery-item-name">Número Dos</p>
-							</div>
-							<div class="gallery-item fade-in">
-								<img
-									src="./assets/clothing/gallery/others/3.jpg"
-									class="gallery-image"
-								/>
-								<p class="gallery-item-name">Número Tres</p>
-							</div>
-							<div class="gallery-item fade-in">
-								<img
-									src="./assets/clothing/gallery/others/4.jpg"
-									class="gallery-image"
-								/>
-								<p class="gallery-item-name">Número Cuatro</p>
-							</div>
-							<div class="gallery-item fade-in">
-								<img
-									src="./assets/clothing/gallery/others/5.jpg"
-									class="gallery-image"
-								/>
-								<p class="gallery-item-name">Número Cinco</p>
-							</div>
-							<div class="gallery-item fade-in">
-								<img
-									src="./assets/clothing/gallery/others/6.jpg"
-									class="gallery-image"
-								/>
-								<p class="gallery-item-name">Número Seis</p>
-							</div>
-						</div>
-					</div>
+				<div class="gallery-item fade-in">
+					<img
+						src="./assets/clothing/gallery/dresses/2.jpg"
+						class="gallery-image"
+					/>
+					<p class="gallery-item-name">Vestido 2</p>
+				</div>
+				<div class="gallery-item fade-in">
+					<img
+						src="./assets/clothing/gallery/dresses/3.jpg"
+						class="gallery-image"
+					/>
+					<p class="gallery-item-name">Vestido 3</p>
+				</div>
+				<div class="gallery-item fade-in">
+					<img
+						src="./assets/clothing/gallery/dresses/4.jpg"
+						class="gallery-image"
+					/>
+					<p class="gallery-item-name">Vestido 4</p>
+				</div>
+				<div class="gallery-item fade-in">
+					<img
+						src="./assets/clothing/gallery/dresses/5.jpg"
+						class="gallery-image"
+					/>
+					<p class="gallery-item-name">Vestido 5</p>
+				</div>
+				<div class="gallery-item fade-in">
+					<img
+						src="./assets/clothing/gallery/dresses/6.jpg"
+						class="gallery-image"
+					/>
+					<p class="gallery-item-name">Vestido 6</p>
+				</div>
+
+				<!-- Others 1-6 -->
+				<div class="gallery-item fade-in">
+					<img
+						src="./assets/clothing/gallery/others/1.jpg"
+						class="gallery-image"
+					/>
+					<p class="gallery-item-name">Otro 1</p>
+				</div>
+				<div class="gallery-item fade-in">
+					<img
+						src="./assets/clothing/gallery/others/2.jpg"
+						class="gallery-image"
+					/>
+					<p class="gallery-item-name">Otro 2</p>
+				</div>
+				<div class="gallery-item fade-in">
+					<img
+						src="./assets/clothing/gallery/others/3.jpg"
+						class="gallery-image"
+					/>
+					<p class="gallery-item-name">Otro 3</p>
+				</div>
+				<div class="gallery-item fade-in">
+					<img
+						src="./assets/clothing/gallery/others/4.jpg"
+						class="gallery-image"
+					/>
+					<p class="gallery-item-name">Otro 4</p>
+				</div>
+				<div class="gallery-item fade-in">
+					<img
+						src="./assets/clothing/gallery/others/5.jpg"
+						class="gallery-image"
+					/>
+					<p class="gallery-item-name">Otro 5</p>
+				</div>
+				<div class="gallery-item fade-in">
+					<img
+						src="./assets/clothing/gallery/others/6.jpg"
+						class="gallery-image"
+					/>
+					<p class="gallery-item-name">Otro 6</p>
 				</div>
 			</div>
+
 			<a href="/"><button class="btn">volver</button></a>
 		</section>
 
